--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,10 @@ set bind r {
   source-file ~/.tmux.conf
   display 'Config reloaded'
 }
+set bind a {
+  setw synchronize-panes
+  display-message 'synchronize-panes is now #{?pane_synchronized,on,off}'
+}
 ## Remap prefix to ctrl z
 # set -g prefix C-z
 # bind C-z send-prefix
