--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,23 +1,64 @@
+
+## General ###################################################################
+
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-## Remap enter behavior in vmode
-# unbind-key -T copy-mode-vi Enter
-# bind-key -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
 set -g base-index 1
 set -g renumber-windows on
 set -g history-file ~/._tmux_history
 set -g default-terminal 'screen-256color'
+# increase buffer size
+set -g history-limit 30000
+
+## Look ######################################################################
+
+set-option -g status-bg blue
+set -g status-fg white
+set -g pane-border-fg white
+set -g pane-active-border-fg white
+set -g pane-active-border-bg blue
+
+
+## Keymaps ###################################################################
+
+## Force window naming
+bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+
 set bind r {
   source-file ~/.tmux.conf
   display 'Config reloaded'
 }
 set bind a {
   setw synchronize-panes
-  display-message 'synchronize-panes is now #{?pane_synchronized,on,off}'
+  display-message 'Sync #{?pane_synchronized,on,off}'
 }
 ## Remap prefix to ctrl z
 # set -g prefix C-z
 # bind C-z send-prefix
 
-## Additions
+## Remap enter behavior in vmode
+# unbind-key -T copy-mode-vi Enter
+# bind-key -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
+
+##     Movement ##############################################################
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-shift-vim keys without prefix key to resize panes
+bind -n M-H resize-pane -L
+bind -n M-J resize-pane -D 
+bind -n M-K resize-pane -U
+bind -n M-L resize-pane -R
+
+# Use Alt-vim keys without prefix key to switch windows
+bind -n C-M-h previous-window
+bind -n C-M-l next-window
+
+
+
+
+## Checkout other configs
 ## https://willhbr.net/2024/03/06/tmux-conf-with-commentary/
