--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g pane-active-border-bg blue
 
 ## Keymaps ###################################################################
 
-## Force window naming
+# Force window naming
 bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
 
 set bind r {
@@ -31,11 +31,11 @@ set bind a {
   setw synchronize-panes
   display-message 'Sync #{?pane_synchronized,on,off}'
 }
-## Remap prefix to ctrl z
+# Remap prefix to ctrl z
 # set -g prefix C-z
 # bind C-z send-prefix
 
-## Remap enter behavior in vmode
+# Remap enter behavior in vmode
 # unbind-key -T copy-mode-vi Enter
 # bind-key -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
 
