--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,29 +8,35 @@ set -g history-file ~/._tmux_history
 set -g default-terminal 'screen-256color'
 # increase buffer size
 set -g history-limit 30000
+set -g mouse on
 
 ## Look ######################################################################
 
-set-option -g status-bg blue
-set -g status-fg white
-set -g pane-border-fg white
-set -g pane-active-border-fg white
-set -g pane-active-border-bg blue
+# set -g status-bg blue
+# set -g status-fg white
+set -g status-style "fg=white,bg=blue"
+# set -g pane-border-fg white
+set -g pane-border-style fg=white
+# set -g pane-active-border-fg white
+# set -g pane-active-border-bg blue
+set -g pane-active-border-style "fg=white,bg=blue"
 
 
 ## Keymaps ###################################################################
 
 # Force window naming
 bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+# Remove auto renaming
+set-option -g allow-rename off
 
-set bind r {
-  source-file ~/.tmux.conf
+set bind r \
+  source-file ~/.tmux.conf \; \
   display 'Config reloaded'
-}
-set bind a {
-  setw synchronize-panes
+
+set bind a \
+  setw synchronize-panes \; \
   display-message 'Sync #{?pane_synchronized,on,off}'
-}
+
 # Remap prefix to ctrl z
 # set -g prefix C-z
 # bind C-z send-prefix
