--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@
 
 set-window-option -g mode-keys vi
 set -g base-index 1
+setw -g pane-base-index 1
 set -g renumber-windows on
 set -g history-file ~/._tmux_history
 set -g default-terminal 'screen-256color'
@@ -25,7 +26,10 @@ set -g pane-active-border-style "fg=white,bg=blue"
 ## Keymaps ###################################################################
 
 # Force window naming
-bind-key c command-prompt -p "window name:" "new-window; rename-window '%%'"
+bind-key c command-prompt -p "window name:" "new-window -c "#{pane_current_path}"; rename-window '%%'"
+# Preserve current path in new window
+# bind c new-window -c "#{pane_current_path}"
+
 # Remove auto renaming
 set-option -g allow-rename off
 
@@ -45,6 +49,10 @@ set bind a \
 # unbind-key -T copy-mode-vi Enter
 # bind-key -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
 
+# Join pane to other window Vertically or Horizontally
+bind j choose-window 'join-pane -h -s "%%"'
+bind J choose-window 'join-pane -s "%%"'
+
 ##     Movement ##############################################################
 
 # Use Alt-vim keys without prefix key to switch panes
@@ -54,17 +62,22 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 # Use Alt-shift-vim keys without prefix key to resize panes
-bind -n M-H resize-pane -L
-bind -n M-J resize-pane -D 
-bind -n M-K resize-pane -U
-bind -n M-L resize-pane -R
+bind -n M-H resize-pane -L 15
+bind -n M-J resize-pane -D 15
+bind -n M-K resize-pane -U 15
+bind -n M-L resize-pane -R 15
 
 # Use Alt-vim keys without prefix key to switch windows
 bind -n C-M-h previous-window
 bind -n C-M-l next-window
+
+# Move windows with < >
+bind -r "<" swap-window -d -t -1
+bind -r ">" swap-window -d -t +1
 
 
 
 
 ## Checkout other configs
 ## https://willhbr.net/2024/03/06/tmux-conf-with-commentary/
+## https://builtin.com/articles/tmux-config
