--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,20 +26,16 @@ set -g pane-active-border-style "fg=white,bg=blue"
 ## Keymaps ###################################################################
 
 # Force window naming
-bind-key c command-prompt -p "window name:" "new-window -c "#{pane_current_path}"; rename-window '%%'"
+bind-key c command-prompt -p "window name:" "new-window -c '#{pane_current_path}'; rename-window '%%'"
 # Preserve current path in new window
 # bind c new-window -c "#{pane_current_path}"
 
 # Remove auto renaming
 set-option -g allow-rename off
 
-set bind r \
-  source-file ~/.tmux.conf \; \
-  display 'Config reloaded'
+set bind r source-file ~/.tmux.conf \; display 'Config reloaded'
 
-set bind a \
-  setw synchronize-panes \; \
-  display-message 'Sync #{?pane_synchronized,on,off}'
+set bind a setw synchronize-panes \; display-message 'Sync #{?pane_synchronized,on,off}'
 
 # Remap prefix to ctrl z
 # set -g prefix C-z
